Test met dependencies. Cycle probleem oplossen.

--- a/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
+++ b/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
@@ -6,12 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure.DataAccess\Infrastructure.DataAccess.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
+
