Database connection - vehicle werkt voor read + write. Eerste web pagina gemaakt om vehicles toe te voegen. Op achtergrond veel klassen aangemaakt voor het doorgeven van de informatie.

--- a/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
+++ b/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
@@ -6,5 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.4.0" />
+  </ItemGroup>
+
 </Project>
 
