--- a/WebApp - Transportbedrijf/WebApp - TransporT.csproj
+++ b/WebApp - Transportbedrijf/WebApp - TransporT.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>WebApp___Transportbedrijf</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
