- Inheritance toegevoegd en goed werkend. - front end: add pagina voor taxi en vrachtwagen toegevoegd. Pagina toegevoegd om alle voertuigen in te zien - Begonnen met transport data stromen. GetTransports staat, nu AddTransports nog toevoegen.

--- a/Core.Domain/Core.Domain.csproj
+++ b/Core.Domain/Core.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Infrastructure.DataAccess\Infrastructure.DataAccess.csproj" />
   </ItemGroup>
 
