--- a/WebApp - Transportbedrijf/WebApp - TransporT.csproj
+++ b/WebApp - Transportbedrijf/WebApp - TransporT.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
   </ItemGroup>
 
