Core.Domain opgesplitst naar TransporT.Shared en TransporT.Services ivm opnieuw probleem met dependencies. Mappers gemaakt.

--- a/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
+++ b/Infrastructure.DataAccess/Infrastructure.DataAccess.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="MySql.Data" Version="9.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TransporT.Shared\TransporT.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
 
