--- a/TransporT.Services/TransporT.Services.csproj
+++ b/TransporT.Services/TransporT.Services.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data" Version="9.4.0" />
+    <ProjectReference Include="..\Infrastructure.DataAccess\Infrastructure.DataAccess.csproj" />
+    <ProjectReference Include="..\TransporT.Shared\TransporT.Shared.csproj" />
   </ItemGroup>
 
 </Project>
