--- a/WebApp - Transportbedrijf/WebApp - TransporT.csproj
+++ b/WebApp - Transportbedrijf/WebApp - TransporT.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+    <ProjectReference Include="..\TransporT.Services\TransporT.Services.csproj" />
+    <ProjectReference Include="..\TransporT.Shared\TransporT.Shared.csproj" />
   </ItemGroup>
 
 </Project>
