--- a/Core.Domain/Core.Domain.csproj
+++ b/Core.Domain/Core.Domain.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="MySql.Data" Version="9.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.DataAccess\Infrastructure.DataAccess.csproj" />
+    <ProjectReference Include="..\TransporT.Shared\TransporT.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
